# cppcompat

./: CMakeLists.txt
include/cppcompat/: cstdio.hpp  cstdlib.hpp  def.hpp  iterator.hpp  memory.hpp  stdlatest.hpp  string.hpp  thread_local.hpp  type_traits.hpp  utility.hpp
src/: cstdlib.cpp  libcxx_functional.cpp  libcxx_iostream_instantiations.cpp  libcxx_verbose_abort.cpp
test/: syntax.sh
